--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+	        <title>Skype chrome extension</title>
 		<script type="text/javascript" src="jquery-1.6.1.min.js"></script>
 		<script type="text/javascript" src="myjs.js"></script>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -8,6 +9,7 @@
 
 	</head>
 	<body>
+	<h1>Skype Friends list</h1>
 		<ul id="listi">
 
 		</ul>
